# last-words-monorepo

./: .commitlintrc.js  .env.example  .eslintrc.js  .gitignore  .prettierignore  .semgrepignore  DEPLOYMENT_GUIDE.md  README.md  amplify.yml  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/scripts/: validate-security.sh
.github/workflows/: ci.yml  security-scan.yml
.turbo/daemon/: 516dfec539f518e4-turbo.log.2025-08-28  5d727a5ea901430f-turbo.log.2025-09-04  5d727a5ea901430f-turbo.log.2025-09-11
.zap/: rules.tsv
apps/web/: .gitignore  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/prisma/: schema.prisma
apps/web/scripts/: generate-env.js  setup-google-oauth.md  setup-production-env.js
docs/: SECURITY_PIPELINE.md
infra/: README.md
infra/security/: README.md  aws-waf-rules.json  cloudflare-waf-rules.json  docker-security.yml  nginx-security.conf  security-test.js
infra/terraform/: cloudflare-security.tf  main.tf  outputs.tf  variables.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
observability/: docker-compose.yml
observability/alertmanager/: alertmanager.yml
observability/grafana/dashboards/: last-words-overview.json
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
prisma/: dev.db  schema.prisma
services/api/: .env.example  .eslintignore  .eslintrc.js  package-lock.json  package.json  pnpm-lock.yaml
services/crypto/: Cargo.toml  package.json
services/crypto/src/: main.rs
(+108 files in other folders)
