[package]
name = "last-words-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
