[package]
name = "last-words-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
sodiumoxide = "0.2"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.21"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
